Add opens args for Java 17 tests